sign up page added

--- a/expense tracker frontend/signup/signup.html
+++ b/expense tracker frontend/signup/signup.html
@@ -58,12 +58,13 @@
                         <label class="form-label" for="password">Password</label>
                         <input type="password" id="password" name="password" class="form-control">
                     </div>
-                    <input type="button" value="Sign Up" class="signup-btn">
+                    <input type="button" value="Sign Up" class="signup-btn" id="btn">
                 </form>
             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+
     <script src="signup.js"></script>
 </body>
 </html>
