--- a/expense tracker frontend/signup/signup.html
+++ b/expense tracker frontend/signup/signup.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-4">
-                <form class="signup-form">
+                <form class="signup-form" id="form">
                     <div class="form-group">
                         <label class="form-label" for="name">Enter your name</label>
                         <input type="text" id="name" name="name" class="form-control">
@@ -58,11 +58,13 @@
                         <label class="form-label" for="password">Password</label>
                         <input type="password" id="password" name="password" class="form-control">
                     </div>
+                    <p id="para" style="color: red;"></p>
                     <input type="button" value="Sign Up" class="signup-btn" id="btn">
                 </form>
             </div>
         </div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 
     <script src="signup.js"></script>
