--- a/expense tracker frontend/signup/signup.html
+++ b/expense tracker frontend/signup/signup.html
@@ -37,10 +37,20 @@
         .signup-btn:hover {
             background-color: #0056b3;
         }
+        .section{
+            background-color: #2d6199; /* Blue color for the top part */
+            padding: 20px;
+            color: #fff;
+            font-family: sans-serif;
+        }
     </style>
 </head>
 
 <body>
+    <div class="section">
+        <h1>Signup</h1>
+
+    </div>>
     
     <div class="container">
         <div class="row justify-content-center">
